--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,6 @@ header {
     font-size: 15px;
     color: white;
     transition: all 0.7s;
-	font-family: ;
 }
 .top > nav > a:hover {
     margin-left: 50px;
@@ -106,25 +105,23 @@ header > article > button{
 	padding: 80px;
 	border-top: 50px;
   }
-  
-  .section-img > article:nth-child(2n) > p {
-	display: block;
-	width: 250px;
-	height: 100px;
-	float: right;
-	border: 300px;
-	margin-top: 100px;
-  }
-  
-  .section-img > article:nth-child(2n+1) > p {
-	display: block;
-	width: 250px;
-	height: 100px;
-	float: left;
-	border: 300px;
-	margin-top: 100px;
-  }
-  
+
+  .section-img>article{
+	  display: flex;
+	  align-items: center;
+	  text-align: center;
+}
+
+.section-img>article:nth-child(2n+1) {
+	display:flex;
+	flex-direction: row-reverse;
+    
+}
+ 
+.section-img img {
+	margin:20px 40px 0;
+}
+
   .subscribe {
 	background-color: #F3F3F3;
 	padding: 50px;
